tests/requests/invalid/006.py
from gunicorn.http.errors import LimitRequestLine
request = LimitRequestLine
